...
    hasTouched: Boolean
): Boolean {
  return !readOnly && value.isNotBlank() && !dateRegex.matches(value) && hasTouched
}

object CommonTaskTestTags {
  const val TITLE = "title"
  const val DESCRIPTION = "description"
  const val DUE_DATE = "due_date"
  const val REMINDER_TIME = "reminder_time"
  const val ADD_PHOTO = "add_photo"
  const val SAVE_TASK = "save_task"
  const val ATTACHMENT = "photo"
  const val DELETE_ATTACHMENT = "delete_photo"
  const val ERROR_MSG = "error_msg"
  const val PROJECT_SELECTION_TITLE = "project_selection_title"
  const val PROJECT_RADIO = "project_radio"
  const val PROJECT_NAME = "project_name"
  const val PROJECT_SELECTION_ERROR = "project_selection_error"
  const val NO_PROJECTS_AVAILABLE = "no_projects_available"
  const val USER_ASSIGNMENT_TITLE = "user_assignment_title"
...
