...
import ch.eureka.eurekapp.screens.subscreens.tasks.UserAssignmentField
import ch.eureka.eurekapp.ui.components.BackButton
import ch.eureka.eurekapp.ui.components.EurekaTopBar
import ch.eureka.eurekapp.ui.designsystem.tokens.EurekaStyles

object EditTaskScreenTestTags {
  const val DELETE_TASK = "delete_task"
  const val STATUS_BUTTON = "task_status"
  const val CONFIRM_DELETE = "confirm_delete"
  const val CANCEL_DELETE = "cancel_delete"
  const val ADD_FILE = "add_file"
}

const val EDIT_SCREEN_SMALL_BUTTON_SIZE = 0.3f
const val EDIT_SCREEN_EQUAL_WEIGHT = 1f

...
